<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-44dp">

    <EditText
        android:id="@+id/Cmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Cmsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CemailT"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        tools:text="@string/Cmsg" />

    <EditText
        android:id="@+id/Cphne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Cphne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CnameT"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        tools:text="@string/Cphne" />

    <EditText
        android:id="@+id/CemailT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CemailT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cphne"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:text="@string/CemailT" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="31dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/caringpharmacy" />

    <ImageView
        android:id="@+id/backicon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/backicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/ContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContactUs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/backicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:text="@string/ContactUs" />

    <TextView
        android:id="@+id/Con1"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Con1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        tools:text="@string/Con1" />

    <TextView
        android:id="@+id/Con2"
        android:layout_width="311dp"
        android:layout_height="54dp"
        android:text="@string/Con2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Con1"
        app:layout_constraintVertical_bias="0.056"
        tools:text="@string/Con2" />

    <Button
        android:id="@+id/TextPhone"
        android:layout_width="166dp"
        android:layout_height="47dp"
        android:text="@string/TextPhone"
        app:icon="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Con2"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/TextPhone" />

    <EditText
        android:id="@+id/CnameT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CnameT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPhone"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        tools:text="@string/CnameT" />

    <Button
        android:id="@+id/Cbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/Cbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Cbutton" />

    <TextView
        android:id="@+id/Cname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Cname"
        app:layout_constraintBottom_toTopOf="@+id/CnameT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Con2"
        tools:text="@string/Cname" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        app:layout_constraintBottom_toTopOf="@+id/Cphne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CnameT"
        app:layout_constraintVertical_bias="0.37"
        tools:text="@string/Phone" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        app:layout_constraintBottom_toTopOf="@+id/CemailT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cphne"
        app:layout_constraintVertical_bias="0.37"
        tools:text="@string/Email" />

    <TextView
        android:id="@+id/Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message"
        app:layout_constraintBottom_toTopOf="@+id/Cmsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CemailT"
        app:layout_constraintVertical_bias="0.37"
        tools:text="@string/Message" />

</androidx.constraintlayout.widget.ConstraintLayout>