<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPayment">

    <ImageButton
        android:id="@+id/imgbtn_UpdateCardB3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="79dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/imageView29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backicon"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caringpharmacy" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView29"
        app:srcCompat="@drawable/stylepayment" />

    <TextView
        android:id="@+id/tv_Payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="334dp"
        android:text="@string/tv_Payment"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_UpdateCardB3"
        tools:text="@string/tv_Payment" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="218dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="177dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Payment">

        <RadioButton
            android:id="@+id/radbtn_PaymentDebit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/radbtn_PaymentDebit"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@string/radbtn_PaymentDebit" />

        <RadioButton
            android:id="@+id/radbtn_PaymentCredit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radbtn_PaymentCredit"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@string/radbtn_PaymentCredit" />

        <RadioButton
            android:id="@+id/radbtn_PaymentCash"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radbtn_PaymentCash"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@string/radbtn_PaymentCash" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_CardDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_CardDetails"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        tools:text="@string/tv_CardDetails" />

    <TextView
        android:id="@+id/tv_CardNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="308dp"
        android:text="@string/tv_CardNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_CardDetails"
        tools:text="@string/tv_CardNo" />

    <TextView
        android:id="@+id/tv_PaymentCardNo"
        android:layout_width="386dp"
        android:layout_height="38dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_PaymentCardNo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_CardNo"
        tools:text="@string/tv_PaymentCardNo" />

    <TextView
        android:id="@+id/tv_HolderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="308dp"
        android:text="@string/tv_HolderName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PaymentCardNo"
        tools:text="@string/tv_HolderName" />

    <TextView
        android:id="@+id/tv_PaymentHolder"
        android:layout_width="386dp"
        android:layout_height="38dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_PaymentHolder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_HolderName"
        tools:text="@string/tv_PaymentHolder" />

    <TextView
        android:id="@+id/tv_ExpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="308dp"
        android:text="@string/tv_ExpDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PaymentHolder"
        tools:text="@string/tv_ExpDate" />

    <TextView
        android:id="@+id/tv_PaymentExpDate"
        android:layout_width="199dp"
        android:layout_height="38dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_PaymentExpDate"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ExpDate"
        tools:text="@string/tv_PaymentExpDate" />

    <TextView
        android:id="@+id/tv_CVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:text="@string/tv_CVV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ExpDate"
        app:layout_constraintTop_toBottomOf="@+id/tv_PaymentHolder"
        tools:text="@string/tv_CVV" />

    <TextView
        android:id="@+id/tv_PaymentCVV"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_PaymentCVV"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_PaymentExpDate"
        app:layout_constraintTop_toBottomOf="@+id/tv_CVV"
        tools:text="@string/tv_PaymentCVV" />

    <Button
        android:id="@+id/btn_PaymentConfirm"
        android:layout_width="388dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#267458"
        android:text="@string/btn_PaymentConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PaymentExpDate"
        tools:text="@string/btn_PaymentConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>