<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="31dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/caringpharmacy" />

    <ImageView
        android:id="@+id/backabout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/backicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/AboutUs"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:text="@string/AboutUs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/backabout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        tools:text="@string/AboutUs" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/text12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutUs"
        tools:text="@string/text12" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="324dp"
        android:layout_height="241dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/abUs"
        android:layout_width="352dp"
        android:layout_height="232dp"
        android:text="@string/abUs"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.576"
        tools:text="@string/abUs" />

    <TextView
        android:id="@+id/mailmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/mailmsg"
        app:layout_constraintBottom_toTopOf="@+id/addmsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/mailmsg" />

    <TextView
        android:id="@+id/addmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/addmsg"
        app:layout_constraintBottom_toTopOf="@+id/abUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:text="@string/addmsg" />

</androidx.constraintlayout.widget.ConstraintLayout>